src/objects/FieloPLT__MemberSegment__c.object
<CustomObject>
    <description>It manually relates Members to Segments. It corresponds to the Manual Segment type.</description>
    <fields>
        <fullName>FieloPLT__MemberSegmentCombination__c</fullName>
        <description>Unique, automatically generated Member ID and Segment ID field. It prevents assigning different Segments to the same Member.</description>
        <inlineHelpText>Unique, automatically generated Member ID and Segment ID field.</inlineHelpText>
        <label>Member Segment Combination</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Member whose Segment is related.</description>
        <inlineHelpText>Choose a Member to assign a Segment.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>MembersSegments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Segment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Segment to relate to the Member Segment.</description>
        <inlineHelpText>Choose a Segment.</inlineHelpText>
        <label>Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloPLT__Segment__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Manual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>MembersSegments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Member Segment</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Member Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ProgramConsistency</fullName>
        <active>true</active>
        <description>The Segment belongs to other Program. Choose a Segment from the same Member Program.</description>
        <errorConditionFormula>FieloPLT__Member__r.FieloPLT__Program__c  &lt;&gt;  FieloPLT__Segment__r.FieloPLT__Program__c</errorConditionFormula>
        <errorMessage>The Segment belongs to other Program. Choose a Segment from the same Member Program</errorMessage>
    </validationRules>
</CustomObject>